--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/JoeMoranMoran">View on GitHub</a>
     <div class="shell">
 
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Joemoranmoran.GitHub.io</h1>
+            <h1>Blog</h1>
             <h2></h2>
           </span>
           <span class="left-tail"></span>
